--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "build": "xcopy app.js bundle\\"
+    "build": "xcopy /y app.js bundle\\"
   },
   "author": "",
   "license": "ISC",
